[project]
name = "elite-telegram-bot"
version = "0.1.0"
description = "Production-ready Telegram bot with FastAPI webhook surface, Stripe Checkout, and Railway deployment."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Hunxho Codex Engineering" }
]
license = { text = "MIT" }
dependencies = [
  "aiogram>=3.4.1",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.29",
  "alembic>=1.13.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "stripe>=11.0.0",
  "redis>=5.0.3",
  "python-dotenv>=1.0.1",
  "aiohttp>=3.9.5",
  "httpx>=0.27.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "structlog>=24.1.0",
  "tenacity>=8.2.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.4.4",
  "mypy>=1.10.0",
  "types-redis",
  "types-requests",
  "types-python-dateutil"
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "N", "ASYNC", "S", "B", "Q", "RUF"]
ignore = ["S311"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
exclude = ["alembic/.*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"
